fix: app layout need more spacings (margin bottom added)

--- a/src/components/AppLayout.scss
+++ b/src/components/AppLayout.scss
@@ -6,6 +6,7 @@
     min-height: 100vh;
     position: relative;
     height: 100%;
+    margin-bottom: 100px;
     .main-content {
         margin-top: 18vh;
     }
